# Modulo11-Ejercicio2

./: .gitignore  README.md  history.json  latest_metrics.json  pyproject.toml
.github/workflows/: pipeline.yaml  pipeline_old.yaml
data/: test.csv  train.csv  validate.csv
scripts/: evaluate_model.py  update_history.py
